--- a/nine.css
+++ b/nine.css
@@ -1,8 +1,18 @@
+.box{
+    margin: 0px auto;
+    width: 100%;
+    height: 100%;
+    display: table;
+    text-align: center;
+}
+/*.box div{
+    float: left;
+}*/
 .content {
      background-color: #ff9900;
      border-radius: 20%;
      width: 30%;
      height: 30vw;
      margin: 1%;
-     float: left;
+     display: inline-block;
  }
